# tuindow

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
.github/workflows/: build.yml  test.yml
test/: conftest.py  debug_window.py  example.py  test_cursor.py  test_line.py  test_panel.py  test_rect.py  test_window.py
tuindow/: __init__.py  __main__.py  _backend.py  _curses.py  api.py  buffers.py  cursor.py  structs.py  validation.py  window.py
tuindow/examples/: simple_editor.py
