[metadata]
name = tuindow
version = 0.0.1
description = a small library for making tui appilcations
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeffrey Pepin
url = https://github.com/peffjepin/tuindow
license = MIT
license_file = LICENSE
platforms =
    linux
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    tuindow

[options.extras_require]
dev =
    pytest
    mypy
