[metadata]
name = tuindow
version = 1.0.0
description = A small package for creating TUI applications
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeffrey Pepin
url = https://github.com/peffjepin/tuindow
license = MIT
license_file = LICENSE
platforms =
    linux
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Environment :: Console :: Curses
    Topic :: Software Development :: User Interfaces

[options]
packages =
    tuindow
    tuindow.examples

[options.extras_require]
dev =
    pytest
    mypy
